# claude-toolbox

./: .gitignore  .mcp.json.example  .tw-slugs.json.example  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LIBRARY.md  README.md  data-policy.json  pyproject.toml
.claude/: doctor.md  settings.json
.claude-plugin/: data-policy.json  marketplace.json  plugin.json
agents/: explore.md  git-policy-auditor.md  plan.md  review.md  summarize.md
commands/: aside.md  audit.md  backlog.md  brief.md  cleanup.md  consolidate-tasks.md  doctor.md  done.md  env.md  history.md  overview.md  pin.md  recap.md  rename-sessions.md  search-sessions.md  snapshot.md  status.md  summarize.md  wrap.md
docs/: claude-directory-reference.md  context-hygiene.md  design-log.md  pipeline-index-ingest-architecture.md  version-history.md
hooks/: hooks.json
mcp/: server.py
mcp_server/: server.py  start.sh
scripts/: _scope.py  _slug.py  add-tasks.py  check-manifest-tag.py  check-pin-ran.py  collect-debug.py  collect-file-history.py  collect-git-policy.py  collect-history.py  collect-inventory.py  collect-memory.py  collect-phase.py  collect-pin.py  collect-plan-map.py  collect-plans.py  collect-plugin-drift.py  collect-session-dirs.py  collect-session-log.py  collect-sessions.py  collect-status.py  collect-summarize.py  collect-tasks.py  cost-tracker.py  git-guard.py  lint-py.py  mark-session-done.py  migrate-sessions-meta.py  name-session.py  post-save.py  relabel-forks.py  rename-unnamed.py  session_index.py  session_naming.py  setup-mcp.py  stamp-git-policy.py  update-project-map.py  (+1 more)
(+26 files in other folders)
